2007-09-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-notify.h:
        * libnautilus-private/nautilus-directory.c:
        * libnautilus-private/nautilus-file-changes-queue.c:
        * libnautilus-private/nautilus-link-desktop-file.c:
        * libnautilus-private/nautilus-merged-directory.c:
	Rename notify functions that work on uris to _by_uri and
	the GFile ones to have no suffix

2007-09-20  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-metafile.c: 
        * libnautilus-private/nautilus-directory.[ch]:
	Remove unused function nautilus_directory_make_uri_canonical
	
2007-09-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-notify.h:
        * libnautilus-private/nautilus-directory.c:
	Added nautilus_directory_notify_files_moved_by_location and
	made nautilus_directory_notify_files_moved use that.

2007-09-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-notify.h:
        * libnautilus-private/nautilus-directory.c:
        Add nautilus_directory_notify_files_added_by_location.
	Use GFile instead of uris in more places

2007-09-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-private.h:
        * libnautilus-private/nautilus-directory.c:
        * libnautilus-private/nautilus-file.[ch]:
	Add nautilus_file_get_for_location and nautilus_file_get_existing_for_location.
	and implement nautilus_file_get based on these.

2007-09-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.[ch]:
        Add nautilus_file_get_location () and use it when
	generating uris.

2007-09-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory.c:
        (nautilus_directory_is_desktop_directory):
        * libnautilus-private/nautilus-file-utilities.[ch]:
        (nautilus_is_home_directory_file):